PyMaker/datas/object2/RawHTML/i6901/Python_DOC_referPages.how-to-index-a-list-using-another-list-variable-e-g-a-range5-b-1-how.txt
<div class="post-text" itemprop="text">
<p>How to index a list using a variable?</p>
<p>Using the below example, how can <code>a</code> and <code>b</code> be used to return the equivalent of <code>a[1]</code>?</p>
<pre><code>&gt;&gt;&gt; a = range(5)
&gt;&gt;&gt; b = [1]

&gt;&gt;&gt; a[1]
1

&gt;&gt;&gt; a(b)
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
&lt;ipython-input-46-ec02cd35061d&gt; in &lt;module&gt;()
      5 a[1]
      6 
----&gt; 7 a(b)

TypeError: 'range' object is not callable

&gt;&gt;&gt; (a)b
  File "&lt;ipython-input-51-0a1106519cc7&gt;", line 1
(a)b
   ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><code>b</code> is a list, not an integer. If <code>b</code> was set to <code>1</code> you can just use that to index:</p>
<pre><code>b = 1
a[b]
</code></pre>
<p>If you were looking to store the <em>operation</em> as a variable (not just the index, but that you are <em>indexing</em> in the first place), use functions or helper objects from the <a href="https://docs.python.org/3/library/operator.html" rel="nofollow noreferrer"><code>operator</code> module</a>.</p>
<p>For example, you can store a <a href="https://docs.python.org/3/library/operator.html#operator.itemgetter" rel="nofollow noreferrer"><code>operator.itemgetter()</code> object</a>:</p>
<pre><code>from operator import itemgetter

b = itemgetter(1)  # ...[1]
b(a)               # apply to a
</code></pre>
</div>
<span class="comment-copy">Can you give examples of other values of <code>b</code> you'd like to see work? Is your goal to make the <i>index</i> variable or the <i>operation</i>?</span>
<span class="comment-copy">Or, if you did consciously meant <code>b</code> to be a list, what should happen if there are 0 elements in that list? Or more than one?</span>
<span class="comment-copy">Answering a question after it's closed is cheating :P</span>
<span class="comment-copy">@TerryA: I wrote my answer before it was closed. And there is a grace period that allows submission of answers for up to 4 hours.</span>
<span class="comment-copy">@Dave: That's <i>two</i> questions. Pandas have a custom <code>__getitem__</code> implementation that accepts tuples (Python passes in the tuple <code>('col1', 'col2')</code>); that question has been answered before, usually for numpy however.</span>
<span class="comment-copy">@Dave If you're talking about pandas then you'd be looking for <a href="https://github.com/margaret/pandas/blob/d13082430513a0ebcb61f0c4ad79eebeab27194f/pandas/core/indexing.py#L108" rel="nofollow noreferrer"><code>__getitem__</code></a>.</span>
<span class="comment-copy">@Dave Misread your sentence. I will re-open</span>
